--- a/package.json
+++ b/package.json
@@ -19,9 +19,19 @@
     "build-prod-android": "cp ./.env.prod ./.env && react-native run-android"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-config": "^1.4.5"
+    "react-native-config": "^1.4.5",
+    "react-native-fbsdk": "^3.0.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
