--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-API_URL = irshad_Dev
+API_URL = irshad_STAGE
+INSTAGRAM_APP_ID = 442893991001305
+INSTAGRAM_APP_SECRET = 12c221896ac3e1f787adecae77df1760
+MYURL = https://irshadvali.github.io/resume/
