--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
     "react-native-fbsdk": "^3.0.0",
+    "react-native-instagram-login": "^2.0.5",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "^11.22.2",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
