--- a/.env.prod
+++ b/.env.prod
@@ -2,3 +2,4 @@ API_URL = irshad_PROD
 INSTAGRAM_APP_ID = 442893991001305
 INSTAGRAM_APP_SECRET = 12c221896ac3e1f787adecae77df1760
 MYURL = https://irshadvali.github.io/resume/
+FACEBOOK_URL=https://graph.facebook.com/v2.5/me?fields=
