--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-prod-android": "cp ./.env.prod ./.env && react-native run-android"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
