--- a/.env.prod
+++ b/.env.prod
@@ -4,3 +4,10 @@ INSTAGRAM_APP_SECRET = 12c221896ac3e1f787adecae77df1760
 MYURL = https://irshadvali.github.io/resume/
 FACEBOOK_URL = https://graph.facebook.com/v2.5/me?fields=
 INSTA_URL = https://graph.instagram.com/me?fields=
+FIREBASE_APIKEY = AIzaSyCRN4BY9rtixYQ-DENJ8Y3M093rqUldmsU
+FIREBASE_AUTH_DOMAIN = ecommerce-f7967.firebaseapp.com
+FIREBASE_DATABASE_URL = https://ecommerce-f7967-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID = ecommerce-f7967
+FIREBASE_STORAGE_BUCKET = ecommerce-f7967.appspot.com
+FIREBASE_MSG_SENDER_ID = 664816110849
+FIREBASE_APPID = 1:664816110849:web:9cac2003f6dbefa9309f00
