--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "firebase": "^8.10.1",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
