--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-config": "^1.4.5",
+    "react-native-date-picker": "^4.2.2",
     "react-native-fbsdk": "^3.0.0",
     "react-native-instagram-login": "^2.0.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
