--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 
 target 'eventApp' do
+  use_frameworks!
   config = use_native_modules!
 
   use_react_native!(
@@ -11,7 +12,6 @@ target 'eventApp' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
-
   target 'eventAppTests' do
     inherit! :complete
     # Pods for testing
