--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-instagram-login": "^2.0.5",
     "react-native-modal": "^13.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
